# Sigil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_env.sh  install_deps.sh  install_toolchain.sh  prj.conf
boards/: arduino_nano_33_ble.conf  arduino_nano_33_ble.overlay  frdm_k64f.conf
src/: accelerometer_handler.cpp  main_functions.cpp  output_handler.cpp  output_handler.hpp
